--- a/index.html
+++ b/index.html
@@ -9,14 +9,16 @@
 <body>
 <!--header start------------------------------------------------------------------------------------------------------->
 <header>
+    <div class="head">
 <h2 class="logo"><span>NEXT</span>  Travel</h2>
 <nav class="navigation">
     <a class="btn btn-primary"id="reg_b1" href="#" role="button">Home</a>
     <a class="btn btn-primary"id="reg_b2"href="#" role="button">About Us</a>
     <a class="btn btn-primary"id="reg_b3"href="#" role="button">News</a>
     <a class="btn btn-primary"id="reg_b4"href="tel:1912" role="button">Tourism Hotline: 1912</a>
-    <a class="btn btn-primary"id="reg_b5" href="#" role="button"><b>REGISTER</b></a>
+    <a class="btn btn-primary"id="reg_b5" href="#" role="button"><b>LOGIN</b></a>
 </nav>
+    </div>
 </header>
 <!--header end--------------------------------------------------------------------------------------------------------->
 <!--main img----------------------------------------------------------------------------------------------------------->
@@ -29,6 +31,37 @@
 <br>
 <br>
 <br>
+<!--log/register------------------------------------------------------------------------------------------------------->
+<section class="loging">
+    <div class="loging_body">
+    <div class="wrapper">
+        <span class="icon-close"><ion-icon name="close-outline"></ion-icon></span>
+        <div class="from-box-login">
+            <h2>Login</h2>
+            <from action="#">
+                <div class="input-box">
+                    <span class="icon"><ion-icon name="mail"></ion-icon></span>
+                    <input type="email" required>
+                    <lable>Email</lable>
+                </div>
+                <div class="input-box">
+                    <span class="icon"><ion-icon name="lock-closed"></ion-icon></span>
+                    <input type="password"required>
+                    <lable>Password</lable>
+                </div>
+
+                <div class="remember-forgot">
+                    <lable><input type="checkbox">Remember me</lable>
+                    <a href="#">Forgot Password</a>
+                </div>
+                <button type="submit" class="btn" id="log_pge_btn">Login</button>
+                <div class="login-register"><p><span>Don't have an account? </span><a href="#"class="register-link">Register</a></p></div>
+            </from>
+        </div>
+    </div>
+    </div>
+</section>
+<!--log/register------------------------------------------------------------------------------------------------------->
 
 <section class="discription">
 
@@ -80,93 +113,95 @@
     </div>
 
 </section>
-<!--<section class="packages">-->
-<!--    <h1><b>Select Your Package</b></h1>-->
-<!--    <br>-->
-<!--    <br>-->
-<!--    <div class="container">-->
-<!--        <section class="cards">-->
-<!--            <article class="card card&#45;&#45;1">-->
-<!--                <div class="card__img"></div>-->
-<!--                <a href="#" class="card_link">-->
-<!--                    <div class="card__img&#45;&#45;hover"></div>-->
-<!--                </a>-->
-<!--                <div class="card__info">-->
-<!--                    <span class="card__category"> SUPER LUXURY</span>-->
-<!--                    <h3 class="card__title">LKR 200,000-150,000 </h3>-->
-<!--                    <p>-->
-<!--                    <ul>-->
-<!--                        <li>5 star Hotel</li>-->
-<!--                        <li>Super Luxury Vehicle</li>-->
-<!--                        <li>others</li>-->
-<!--                    </ul>-->
-<!--                    </p>-->
-<!--                    <span class="card__by"><a class="btn btn-primary"id="crd_btn1" href="#" role="button">Select</a></span>-->
-<!--                </div>-->
-<!--            </article>-->
+
+<section class="packages">
+    <h1><b>Select Your Package</b></h1>
+    <br>
+    <br>
+    <div class="container">
+        <section class="cards">
+            <article class="card card--1">
+                <div class="card__img"></div>
+                <a href="#" class="card_link">
+                    <div class="card__img--hover"></div>
+                </a>
+                <div class="card__info">
+                    <span class="card__category"> SUPER LUXURY</span>
+                    <h3 class="card__title">LKR 200,000-150,000 </h3>
+                    <p>
+                    <ul>
+                        <li>5 star Hotel</li>
+                        <li>Super Luxury Vehicle</li>
+                        <li>others</li>
+                    </ul>
+                    </p>
+                    <span class="card__by"><a class="btn btn-primary"id="crd_btn1" href="#" role="button">Select</a></span>
+                </div>
+            </article>
 
 
-<!--            <article class="card card&#45;&#45;2">-->
-<!--                <div class="card__img"></div>-->
-<!--                <a href="#" class="card_link">-->
-<!--                    <div class="card__img&#45;&#45;hover"></div>-->
-<!--                </a>-->
-<!--                <div class="card__info">-->
-<!--                    <span class="card__category"> LUXURY</span>-->
-<!--                    <h3 class="card__title">LKR 150,000-70,000</h3>-->
-<!--                    <p>-->
-<!--                    <ul>-->
-<!--                        <li>5 star or 4 star Hotel</li>-->
-<!--                        <li>Luxury Vehicle</li>-->
-<!--                        <li>others</li>-->
-<!--                    </ul>-->
-<!--                    </p>-->
-<!--                    <span class="card__by"><a class="btn btn-primary"id="crd_btn2" href="#" role="button">Select</a></span>-->
-<!--                </div>-->
-<!--            </article>-->
+            <article class="card card--2">
+                <div class="card__img"></div>
+                <a href="#" class="card_link">
+                    <div class="card__img--hover"></div>
+                </a>
+                <div class="card__info">
+                    <span class="card__category"> LUXURY</span>
+                    <h3 class="card__title">LKR 150,000-70,000</h3>
+                    <p>
+                    <ul>
+                        <li>5 star or 4 star Hotel</li>
+                        <li>Luxury Vehicle</li>
+                        <li>others</li>
+                    </ul>
+                    </p>
+                    <span class="card__by"><a class="btn btn-primary"id="crd_btn2" href="#" role="button">Select</a></span>
+                </div>
+            </article>
 
 
-<!--            <article class="card card&#45;&#45;3">-->
-<!--                <div class="card__img"></div>-->
-<!--                <a href="#" class="card_link">-->
-<!--                    <div class="card__img&#45;&#45;hover"></div>-->
-<!--                </a>-->
-<!--                <div class="card__info">-->
-<!--                    <span class="card__category"> MID-LEVEL</span>-->
-<!--                    <h3 class="card__title">LKR 70,000-25,000</h3>-->
-<!--                    <p>-->
-<!--                    <ul>-->
-<!--                        <li>4 star or 3 star Hotel</li>-->
-<!--                        <li>Mid-range Vehicle</li>-->
-<!--                        <li>others</li>-->
-<!--                    </ul>-->
-<!--                    </p>-->
-<!--                    <span class="card__by"><a class="btn btn-primary"id="crd_btn3" href="#" role="button">Select</a></span>-->
-<!--                </div>-->
-<!--            </article>-->
+            <article class="card card--3">
+                <div class="card__img"></div>
+                <a href="#" class="card_link">
+                    <div class="card__img--hover"></div>
+                </a>
+                <div class="card__info">
+                    <span class="card__category"> MID-LEVEL</span>
+                    <h3 class="card__title">LKR 70,000-25,000</h3>
+                    <p>
+                    <ul>
+                        <li>4 star or 3 star Hotel</li>
+                        <li>Mid-range Vehicle</li>
+                        <li>others</li>
+                    </ul>
+                    </p>
+                    <span class="card__by"><a class="btn btn-primary"id="crd_btn3" href="#" role="button">Select</a></span>
+                </div>
+            </article>
 
-<!--            <article class="card card&#45;&#45;4">-->
-<!--                <div class="card__img"></div>-->
-<!--                <a href="#" class="card_link">-->
-<!--                    <div class="card__img&#45;&#45;hover"></div>-->
-<!--                </a>-->
-<!--                <div class="card__info">-->
-<!--                    <span class="card__category"> REGULAR</span>-->
-<!--                    <h3 class="card__title">LKR 25,000-10,000</h3>-->
-<!--                    <p>-->
-<!--                    <ul>-->
-<!--                        <li>3 stars or 2 star Hotel</li>-->
-<!--                        <li>Economy Vehicle</li>-->
-<!--                        <li>others</li>-->
-<!--                    </ul>-->
-<!--                    </p>-->
-<!--                    <span class="card__by"><a class="btn btn-primary"id="crd_btn4" href="#" role="button">Select</a></span>-->
-<!--                </div>-->
-<!--            </article>-->
+            <article class="card card--4">
+                <div class="card__img"></div>
+                <a href="#" class="card_link">
+                    <div class="card__img--hover"></div>
+                </a>
+                <div class="card__info">
+                    <span class="card__category"> REGULAR</span>
+                    <h3 class="card__title">LKR 25,000-10,000</h3>
+                    <p>
+                    <ul>
+                        <li>3 stars or 2 star Hotel</li>
+                        <li>Economy Vehicle</li>
+                        <li>others</li>
+                    </ul>
+                    </p>
+                    <span class="card__by"><a class="btn btn-primary"id="crd_btn4" href="#" role="button">Select</a></span>
+                </div>
+            </article>
 
-<!--        </section>-->
-<!--    </div>-->
-<!--</section>-->
+        </section>
+    </div>
+</section>
+
 
 
 <br>
@@ -257,5 +292,6 @@
         </div>
 </section>
 </section>
+<script src="script.js"></script>
 </body>
 </html>
